package com.farm.sales.model;

public enum Role {
  DIRECTOR,
  MANAGER,
  LOGISTICIAN,
  DRIVER
}
