@startuml
skinparam classAttributeIconSize 0

class User {
  -id: Long
  -username: String
  -passwordHash: String
  -fullName: String
  -phone: String
  -legalEntityName: String
  -role: Role
}

class StoreAddress {
  -id: Long
  -user: User
  -label: String
  -addressLine: String
  -latitude: BigDecimal
  -longitude: BigDecimal
}

class Product {
  -id: Long
  -name: String
  -category: String
  -description: String
  -photoUrl: String
  -price: BigDecimal
  -stockQuantity: Integer
  -weightKg: Double
  -volumeM3: Double
}

class Order {
  -id: Long
  -customer: User
  -deliveryAddress: StoreAddress
  -assignedDriver: User
  -status: OrderStatus
  -totalAmount: BigDecimal
  -createdAt: Instant
  -approvedAt: Instant
  -assignedAt: Instant
  -deliveredAt: Instant
}

class OrderItem {
  -id: Long
  -order: Order
  -product: Product
  -quantity: Integer
  -price: BigDecimal
  -lineTotal: BigDecimal
}

class StockMovement {
  -id: Long
  -product: Product
  -order: Order
  -movementType: StockMovementType
  -quantityChange: Integer
  -reason: String
  -createdAt: Instant
}

class OrderTimelineEvent {
  -id: Long
  -order: Order
  -fromStatus: OrderStatus
  -toStatus: OrderStatus
  -actorUsername: String
  -createdAt: Instant
}

class RealtimeNotification {
  -id: Long
  -title: String
  -message: String
  -eventType: String
  -targetRoles: String
}

enum Role {
  DIRECTOR
  MANAGER
  LOGISTICIAN
  DRIVER
}

enum OrderStatus {
  CREATED
  APPROVED
  ASSIGNED
  DELIVERED
}

User "1" -- "many" StoreAddress : owns
User "1" -- "many" Order : creates
User "1" -- "many" Order : assignedDriver
StoreAddress "1" -- "many" Order : deliveryAddress
Order "1" -- "many" OrderItem : items
Product "1" -- "many" OrderItem : product
Product "1" -- "many" StockMovement : affects
Order "1" -- "many" StockMovement : source
Order "1" -- "many" OrderTimelineEvent : timeline
Order "1" -- "many" RealtimeNotification : notifies
@enduml
